[package]
name = "conflict-resolution-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1"
flume = "0.11"
redhac = { path = "../.." }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["tracing"] }
