[package]
name = "ha_setup"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]

[dependencies]
anyhow = "1"
redhac = { path = "../../" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["tracing"] }
